Fix closing tags and template string in test.html

--- a/test.html
+++ b/test.html
@@ -1621,6 +1621,12 @@
                                     </div>
                                 </div>
                             </div>
+                        ` : ''}
+                    </div>
+                ` : ''}
+            `;
+        }
+
                             
                             <div class="form-grid">
                                 <div style="background: #f0f8ff; padding: 1rem; border-radius: 12px;">
@@ -2332,3 +2338,12 @@
                                     </div>
                                 </div>
                             </div>
+                        ` : ''}
+                    </div>
+                ` : ''}
+            `;
+        }
+
+    </script>
+</body>
+</html>
