--- a/index.html
+++ b/index.html
@@ -946,6 +946,13 @@
                                 <div class="row">
                                     <div class="col">
                                         <div class="form-group">
+                                            <label for="documentDay">📅 Day</label>
+                                            <select id="documentDay">
+                                                <option value="">Select Day</option>
+                                                <!-- Options will be populated dynamically -->
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
                                             <label for="documentType">📂 Document Type</label>
                                             <select id="documentType">
                                                 <option value="🎫 Transport Ticket">🎫 Transport Ticket</option>
